--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NHẠC CỦA TÔI</title>
+    <title>NHẠC CỦA THẮNG</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="/Bootstrap-Icons/font/bootstrap-icons.css">
 </head>
